@@ -52,7 +52,7 @@ GEM_SPEC = Gem::Specification.new do |s|
 
   s.add_dependency 'actionmailer', '>= 1.2.5'
   s.add_dependency 'rake', '>= 0.7.1'
-  s.add_dependency 'jabber4r', '>= 0.8.0'
+  s.add_dependency 'xmpp4r', '>= 0.3'
   s.add_dependency 'Ruby-IRC', '>= 1.0.3'
 
   s.files = Dir.glob("{bin,lib,test}/**/*").delete_if { |item| item.include?('__workdir') }
