@@ -1,5 +1,5 @@
 require 'rubygems'
-require 'jabber4r/jabber4r'
+require 'xmpp4r'
 require 'cerberus/publisher/base'
 
 class Cerberus::Publisher::Jabber < Cerberus::Publisher::Base
@@ -10,26 +10,16 @@ class Cerberus::Publisher::Jabber < Cerberus::Publisher::Base
 
       subject,body = Cerberus::Publisher::Base.formatted_message(state, manager, options)
 
-      session = login(jabber_options[:jid], jabber_options[:password])
+      client = Jabber::Client::new(Jabber::JID.new(jabber_options[:jid]))
+      client.connect
+      client.auth(jabber_options[:password])
+
       jabber_options[:recipients].split(',').each do |address|
-        session.new_message(address.strip).set_subject(subject).set_body(body).send
+        message = Jabber::Message::new(address.strip, body).set_subject(subject)
+        client.send(message)
       end
     ensure
-      session.release if session
-    end
-  end
-
-  def self.login(id_resource, password, register_if_login_fails=true)
-    begin
-      session = ::Jabber::Session.bind(id_resource, password)
-    rescue
-      if(register_if_login_fails)
-        if(::Jabber::Session.register(id_resource, password))
-          Cerberus::Publisher::Jabber.login(id_resource, password, false)
-        else
-          raise "Failed to register #{id_resource}"
-        end
-      end
+      client.close if client
     end
   end
 end
